--- a/VECV.html
+++ b/VECV.html
@@ -83,41 +83,41 @@
       <p><b><i> Roles & Responsibilities:</i></b>
         <br>
         <br>
-                   - Understood the complete foundry and machining processes along with inspection and measurement techniques. 
-        Learned in detail about the green sand, shell sand, ADCOLE, 3CMM, roundness and surface finish tester, spectrometer, etc
-        <br> <br>
-        - Conducted a thorough study about different types of materials like the chill cast, ductile iron, etc with shot blasting, crack testing
-        along with heat treatment processes like Nitriding, Phosphating, Induction Hardening, Tempering & Stress Relieving.
+           - Designed an innovative pallet using SolidWorks to automate the engine bore lubrication process for 6 different types of engines.
+             It saved approximately $250K for new equipment.
         <br>
         <br>
-        - Studied microstructure and metallurgy for case hardening, case depth, particle count, grinding burns with 32 channel spectrometer.  
+          - Learned all the technicalities about Automated Guided Vehicles and its components like Contactless Charging, Magnetic Guided
+        path, RFID tags and Laser Scanner. Trained interns about AGVs and its usage. 
         <br>
         <br>
-        - Led cross-functional team for casting and machining feasibility, part costing, interpreting engineering drawings and revisions with GD&T.
-         to meet customer's engineering and quality requirements. 
+          - Minimized labor cost and improved engine assembly processes by installing Automated Guided Vehicles with internal technicians
+            and external suppliers. 
         <br>
         <br>
-        - Achieved project milestones by managing 20 auto companies with over 60 projects for New Product Development.
+          - Aided in validating and testing the installed Automated Guided Vehicles by taking multiple engine assembly trials. Performed 
+        troubleshooting steps to fix any glitch during the assembly process. Also collected some data and did data analysis to present
+        the report to the departmental head.
         <br>
         <br>
-        - Took lead for process modifications to resolve casting and machining problems on manufacturing lines on behalf of customers.
-      <br>
-      <br>
-        - Worked on PPAP, FMEAs, ISO/TS Audits, APQP, DVP&R, product metallurgical testing to meet specifications.
+          - Examined root causes for equipment breakdown and high lead time by analyzing existing production processes and operations of 6 different
+        engines by performing modifications and testing using MES. 
         <br>
         <br>
-        - Provided technical and purchase support for prototyping, tooling and fixtures, pre and series production with quality challenges.  
-      <br> <br>
-        - Responsible for weekly reporting, monthly scheduling and three months forecasting with the sales team.
-        <br><br>
-        - Conducted detailed market study including automotive news watch, vehicle production (ACMA/ SIAM), market share, competitor watch and new launches to 
-        increase the company's sales, planning and production capabilities. 
-        <br><br>
-        - Acquainted customers with MAHLE facilities and technologies by giving presentations and plant tours. 
+          - Worked on vision system for quality inspection and FANUC robot on engine assembly line to analyze & circumvent system malfunctioning.
         <br>
         <br>
-        - Coordinated in schedule and supply monitoring, logistics, eCommerce and Incoterms for the supply chain management.
-        <br> <br> <br>
+          - Undertook projects for relocating, refurbishing and upgrading engine assembly equipment at a new location with vendors to reduce overall lead
+        time, operation cost, optimized throughput.
+        <br>
+        <br>
+         - Conducted cycle time analysis & pilot studies to validate the processes and evaluate the modification on engine assembly line with production team.
+        <br>
+        <br>
+          - Prepared PFMEA reports by RPN to mitigate process failures, presented it to the Technical Heads, demonstrating technical & communication skills.
+        <br>
+        <br>
+        <br>
         <img src="./images/VECVpic2.jpg" alt="XL2" class="center">
       <br>
           
