--- a/ISLab.html
+++ b/ISLab.html
@@ -281,10 +281,10 @@ following ideas are:
               - Inducing different faulty drill bits and using different job material would definitely give us diverse vibration signals. We will have more data to compare and see the effects of different experimental setup.
               <br>
               <br>
-              -Once we have a diverse data set, we can try Artificial Intelligence algorithms and Machine Learning techniques to develop robust models to detect and classify the data. These models would help to predict the type of data on unseen dataset.
+              - Once we have a diverse data set, we can try Artificial Intelligence algorithms and Machine Learning techniques to develop robust models to detect and classify the data. These models would help to predict the type of data on unseen dataset.
               <br>
               <br>
-              For Roll to Roll machine, we studied the vibration isolators helped to dampen the vibration quickly and reduce the vibration intensity by small amount. It would be helpful if we try to install more isolators in the web handling section. The application of rubber sheet of Shore 20A/30A between the granite table and breadboard could help to reduce the vibrations further.
+              - For Roll to Roll machine, we studied the vibration isolators helped to dampen the vibration quickly and reduce the vibration intensity by small amount. It would be helpful if we try to install more isolators in the web handling section. The application of rubber sheet of Shore 20A/30A between the granite table and breadboard could help to reduce the vibrations further.
               <br>
               <br>
               <br>
