--- a/ADDFab.html
+++ b/ADDFab.html
@@ -63,7 +63,7 @@
             most of them are patented designs. But I can give you some information just to give you a taste of it.
                        <br>
            <br>
-           - Obaggo Plastic Bag Recycling: Obaggo is a kitchen appliance that enables you to recycle your plastic bags and packaging film,
+            - <b>Obaggo Plastic Bag Recycling</b>: Obaggo is a kitchen appliance that enables you to recycle your plastic bags and packaging film,
             such as bread bags, cereal box liners, paper product overwrap, etc., in the comfort and convenience of your curbside recycling 
             bin. " Our solution for recycling plastic film is to enable consumers and businesses to densify their plastic into rigid pucks 
             that are economical to collect curbside, and easy to sort at Material Recovery Facilities.  We want to prove that this 
@@ -71,19 +71,20 @@
             film plastic packaging" - David New, Obaggo Recycling, LLC (https://www.obaggo.com/)
           <br>
 <br>
-            - Arm Band Casing, a wearable device, used to monitor health in a real-world settings.
+            - <b>Arm Band Casing</b>, a wearable device, used to monitor health in a real-world settings.
             <br>
     <br>
-            - Elateq's Water Purification Technology, a cleaner and greener way to purify water. (http://www.elateq.com/about-us/)
+            - <b>Elateq's Water Purification Technology</b>, a cleaner and greener way to purify water. (http://www.elateq.com/about-us/)
             <br>
         <br>
-            - Custom glasses for Avana 3D, satisfy even the hardest to fit customers with frames made just for them. (https://www.avana3d.com/)
+            - <b>Custom glasses</b> for Avana 3D, satisfy even the hardest to fit customers with frames made just for them. (https://www.avana3d.com/)
             <br>
             <br>
-            - Circuit Board casings for Roll to Roll Fabrication. (https://blogs.umass.edu/xiandu/)
+            - <b>Circuit Board Casings</b> for Roll to Roll Fabrication. (https://blogs.umass.edu/xiandu/)
             <br>
             <br>
-            - Gear Cube designing and prototyping, for fun! I can share some real images of this project as I was the owner of this project.
+            - <b>Gear Cube</b> designing and prototyping, for fun! I can share some real images of this project as I was the owner of this project.
+            <br>
             <br>
       
       <img src="./images/asmitjainADDFab3.jpg" alt="ADDfab" class="center">
@@ -158,9 +159,11 @@
       
 <!-- External links Section BEGINS -->
   <div class="footer">
-    <span><a href="https://github.com/asmitjain" target="_blank"><img src="./images/social/github.svg" alt="Link to Github Profile"></a></span>
-    <span><a href="https://www.linkedin.com/in/thisisasmit" target="_blank"><img src="./images/social/linkedin.svg" alt="Link to Linkedin Profile"></a></span>
-    <span><a href="https://twitter.com/thisisasmit" target="_blank"><img src="./images/social/twitter.svg" alt="Link to Twitter Profile"></a></span>
+    <span><a href="https://www.facebook.com/thisisasmit" target="_blank"><img src="https://img.icons8.com/doodle/48/000000/facebook-new.png" alt="Link to Facebook Profile"></a></span>
+    <span><a href="https://www.instagram.com/asmitjain/" target="_blank"><img src="https://img.icons8.com/doodle/48/000000/instagram--v1.png" alt="Link to Instagram Profile"></a></span>
+    <span><a href="https://github.com/asmitjain" target="_blank"><img src="https://img.icons8.com/doodle/48/000000/github.png" alt="Link to Github Profile"></a></span>
+    <span><a href="https://www.linkedin.com/in/thisisasmit" target="_blank"><img src="https://img.icons8.com/doodle/48/000000/linkedin--v2.png" alt="Link to Linkedin Profile"></a></span>
+    <span><a href="https://twitter.com/thisisasmit" target="_blank"><img src="https://img.icons8.com/doodle/48/000000/twitter--v1.png" alt="Link to Twitter Profile"></a></span>
   </div>
   <!-- External links Section ENDS -->
 
