--- a/ExcelDryer.html
+++ b/ExcelDryer.html
@@ -45,8 +45,8 @@
           <p><b><i> Overview:</i></b>
             <br>
             <br>
-          I have recently started working at Excel Dryer located in East Longmeadow, Massachusetts. 
-          This company manufactures the finest quality hand dryer and hairdryer for commercial places. This enables 95% cost
+          I have recently started working at Excel Dryer, Inc located in East Longmeadow, Massachusetts. 
+          This company manufactures the finest quality hand dryer and hairdryer for commercial places. The products enable 95% cost
           savings and 70% carbon footprint reduction by getting rid of paper towels and switching to our high-speed, 
           energy-efficient hand dryers.
 <br>
@@ -61,16 +61,21 @@ My motivation to work at Excel Dryer is to support the development of highly eff
       <p><b><i> Roles & Responsibilities:</i></b>
         <br>
         <br>
-        - Collaborating in research & development of new products with cross-functional team.
+        - Developing in-housing testing rigs for temperature, pressure, flow rate, velocity, RPM and electrical data to check quality and performance.
+                <br>
+        <br>
+        - Collaborating in research & development of new products with cross-functional team, writing codes in arduino and modifying codes in
+        C language.
         <br>
         <br>
-- Redesigning & modifying existing models based on their performance and evaluation.
+- Redesigning & modifying existing models based on their performance and evaluation, performing calculations for validating results.
         <br>
         <br>
 - Communicating with vendors and suppliers to develop high-quality parts for mass production.
         <br>
         <br>
-- Supporting team in documentation and testing for making products compliant and certified with different standards for various countries.
+- Assisting in Electromagnetic Compatibility devices and Low Voltage Devices certification for different countries, performing 
+        modifications to pass tests. Supporting team in documentation and testing for making products compliant and certified with different standards.
         <br>
         <br>
 - Designing different components and promoting rapid prototyping using in-house 3D printing and conventional machining facilities like bed mill, lathe, drill press, etc.
