--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html>
 
 <head>
+<style>
+body  {
+  background-image: url("./images/Website Background.png");
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+}
+</style>
+</head>
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-149834031-1"></script>
 <script>
@@ -39,7 +48,7 @@
   </div>
   <!-- Sticky Header ENDS -->
   
-   
+
   <!-- Introduction Section Begins -->
   <div class="landing-header">
     <p id="personal-tag-para"> <span id="personal-tag" class="underline--magical"></span> </p>
