--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <style>
 body  {
-  background-image: url("./images/Website Background.png");
+  background-image: url("./images/Website Background.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
 }
