--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 body  {
   background-image: url("./images/Website Background.jpg");
   background-repeat: no-repeat;
-  background-attachment: scroll;
+  background-attachment: fixed;
 }
 </style>
 </head>
