--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ body  {
   background-image: url("./images/Website Background.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
+  background-position: right;
 }
 </style>
 </head>
