--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <style>
 body  {
-  background-image: url("./images/Website Background.jpg");
+  background-image: url("./images/WebsiteBackground2.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: right;
