--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ body  {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: right;
+  background-size: auto;
 }
 </style>
 </head>
