--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ body  {
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
   <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/Honeycomb.css">
 </head>
 
 <body>
@@ -71,7 +72,9 @@ body  {
   <!-- Introduction Section Ends -->
   <br>
   <br>
-    <h1>HONEYCOMB</h1>
+  <br>
+  <br>
+    <h2><span class="underline-magical-sub-header">DOMAINS</span></h2>
     <section>
     <div class="hex_row_odd"> 
       <div class="center">
