--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@ body  {
   <br>
   <br>
   <br>
+  <div class="domain-design" id="domain-design">
     <h2><span class="underline-magical-sub-header">DOMAINS</span></h2>
     <section>
     <div class="hex_row_odd"> 
@@ -213,9 +214,9 @@ body  {
       </div><!--/center--> 
     </div><!--/hex_row_even-->  
 
-
     </section>  
-  <br>
+  </div>
+    <br>
   <br>
   
   <!-- Projects Section BEGINS -->
