--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@ body  {
   <!-- Introduction Section Ends -->
   <br>
   <br>
+  <!-- Domain Section Starts -->
   <br>
   <br>
   <div class="domain-design" id="domain-design">
@@ -216,8 +217,9 @@ body  {
 
     </section>  
   </div>
-    <br>
   <br>
+  <br>
+  <!-- Domain Section Ends -->
   
   <!-- Projects Section BEGINS -->
   <div class="project-design" id="project-design">
