--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -47,7 +47,7 @@ body  {
       <span><a href="#skills-design">SKILLS</a></span>
       <span><a href="#about">ABOUT</a></span>
       <span><a href="https://drive.google.com/file/d/1mKp8SMaigExeC5JSFWjSTU_Aj5dEMAst/view" target="_blank">RESUME/CV</a></span>
-      </div>
+    </div>
   </div>
   <!-- Sticky Header ENDS -->
   
@@ -65,7 +65,7 @@ body  {
       <br>
       <p>⚠️<i>This website is under construction. So please stay tuned and visit again for new updates!</i></p></h2>
     <!--<p>⚠️CAUTION: This site is under construction. Stay Tuned!.</p>-->
-   </div>
+  </div>
   <br>
       <br>
       <br>
@@ -201,7 +201,7 @@ body  {
         </div><!--/hexagon--> 
       </div><!--/center--> 
 
-      <div class="center">
+      <div class="centerhex">
         <div class="hexagon">
           <div class="hex1">
             <div class="hex2" style="background: url('https://upload.wikimedia.org/wikipedia/commons/c/c2/1999_-_Surf_%C3%A0_Waikiki_Beach_Honolulu_Hawa%C3%AF.jpg') center no-repeat">
@@ -477,4 +477,4 @@ body  {
 
 </body>
 
-</HTML>
+</html>
