--- a/index.html
+++ b/index.html
@@ -79,16 +79,21 @@ body  {
   <div class="domain-design" id="domain-design">
     <h2><span class="underline-magical-sub-header">DOMAINS</span></h2>
   </div>  
-
-  <div class="hex_row_odd"> 
-    <div class="hexagon">
-      <div class="hex1">
-        <div class="hex2" style="background: black">
-        </div><!--/hex2--> 
-      </div><!--/hex1-->
-   </div><!--/hexagon--> 
- </div><!--/center-->
   
+  <div class="honeycomb">
+    <div class="ibws-fix">
+      <div class="hexagon">
+        <div class="hexagontent">A</div>
+      </div>
+      <div class="hexagon">
+        <div class="hexagontent">B</div>
+      </div>
+      <div class="hexagon">
+        <div class="hexagontent">C</div>
+      </div>
+    </div>
+  </div>
+
   <br>
   <br>
   <!-- Domain Section Ends -->
