--- a/index.html
+++ b/index.html
@@ -82,16 +82,81 @@ body  {
   
   <div class="honeycomb">
     <div class="ibws-fix">
-      <div class="hexagon">
-        <div class="hexagontent">A</div>
+
+      <div class="hexagon2">
+        <div class="hexagontent"></div>
       </div>
       <div class="hexagon">
-        <div class="hexagontent">B</div>
+        <div class="hexagontent">Computer Aided Design (CAD)</div>
       </div>
       <div class="hexagon">
-        <div class="hexagontent">C</div>
+        <div class="hexagontent">Lean / Six Sigma</div>
+      </div>
+      <div class="hexagon2">
+        <div class="hexagontent">Quality Control</div>
+      </div>
+      <div class="hexagon3">
+        <div class="hexagontent"></div>
+      </div>
+      <div class="hexagon2">
+        <div class="hexagontent">Additive Manufacturing</div>
+      </div>
+      <div class="hexagon">
+        <div class="hexagontent">New Product Development</div>
       </div>
     </div>
+    <div class="ibws-fix">
+
+      <div class="hexagon3">
+        <div class="hexagontent"></div>
+      </div>
+      <div class="hexagon2">
+        <div class="hexagontent">PLC & HMI/ SCADA</div>
+      </div>
+      <div class="hexagon3">
+        <div class="hexagontent"></div>
+      </div>
+      <div class="hexagon4">
+        <div class="hexagontent"></div>
+      </div>
+      <div class="hexagon">
+        <div class="hexagontent">Data Acquisition & Analysis</div>
+      </div>
+      <div class="hexagon">
+        <div class="hexagontent">Finite Element Analysis & Optimization</div>
+      </div>
+      <div class="hexagon">
+        <div class="hexagontent">Computer Programming</div>
+      </div>
+    </div>
+
+    <div class="ibws-fix">
+      <div class="hexagon">
+        <div class="hexagontent">
+          <h1></h1>
+        </div>
+      </div>
+      <div class="hexagon">
+        <div class="hexagontent">Computer Aided Manufacturing</div>
+      </div>
+      <div class="hexagon">
+        <div class="hexagontent"></div>
+      </div>
+      <div class="hexagon3">
+        <div class="hexagontent"></div>
+      </div>
+      <div class="hexagon2">
+        <div class="hexagontent"></div>
+      </div>
+
+      <div class="hexagon2">
+        <div class="hexagontent"></div>
+      </div>
+      <div class="hexagon3">
+        <div class="hexagontent"></div>
+      </div>
+    </div>
+  </div>
   </div>
 
   <br>
