--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@ body  {
         <div class="hexagontent"></div>
       </div>
       <div class="hexagon">
-        <div class="hexagontent">Computer Aided Design (CAD)</div>
+        <div class="hexagontent">MECHANICAL DESIGN</div>
       </div>
       <div class="hexagon">
-        <div class="hexagontent">Lean / Six Sigma</div>
+        <div class="hexagontent">Lean</div>
       </div>
       <div class="hexagon2">
         <div class="hexagontent">Quality Control</div>
@@ -99,7 +99,7 @@ body  {
         <div class="hexagontent"></div>
       </div>
       <div class="hexagon2">
-        <div class="hexagontent">Additive Manufacturing</div>
+        <div class="hexagontent">3D PRINTING</div>
       </div>
       <div class="hexagon">
         <div class="hexagontent">New Product Development</div>
@@ -108,7 +108,7 @@ body  {
     <div class="ibws-fix">
 
       <div class="hexagon3">
-        <div class="hexagontent"></div>
+        <div class="hexagontent">SIX SIGMA</div>
       </div>
       <div class="hexagon2">
         <div class="hexagontent">PLC & HMI/ SCADA</div>
@@ -123,7 +123,7 @@ body  {
         <div class="hexagontent">Data Acquisition & Analysis</div>
       </div>
       <div class="hexagon">
-        <div class="hexagontent">Finite Element Analysis & Optimization</div>
+        <div class="hexagontent">Finite Element Analysis</div>
       </div>
       <div class="hexagon">
         <div class="hexagontent">Computer Programming</div>
@@ -137,13 +137,13 @@ body  {
         </div>
       </div>
       <div class="hexagon">
-        <div class="hexagontent">Computer Aided Manufacturing</div>
+        <div class="hexagontent">Manufacturing</div>
       </div>
       <div class="hexagon">
         <div class="hexagontent"></div>
       </div>
       <div class="hexagon3">
-        <div class="hexagontent"></div>
+        <div class="hexagontent">DESIGN OPTIMIZATION</div>
       </div>
       <div class="hexagon2">
         <div class="hexagontent"></div>
