--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@ body  {
         <div class="hexagontent">MECHANICAL DESIGN</div>
       </div>
       <div class="hexagon">
-        <div class="hexagontent">Lean</div>
+        <div class="hexagontent">LEAN</div>
       </div>
       <div class="hexagon2">
-        <div class="hexagontent">Quality Control</div>
+        <div class="hexagontent">QUALITY CONTROL</div>
       </div>
       <div class="hexagon3">
         <div class="hexagontent"></div>
@@ -102,7 +102,7 @@ body  {
         <div class="hexagontent">3D PRINTING</div>
       </div>
       <div class="hexagon">
-        <div class="hexagontent">New Product Development</div>
+        <div class="hexagontent">PRODUCT DEVELOPMENT</div>
       </div>
     </div>
     <div class="ibws-fix">
@@ -120,13 +120,13 @@ body  {
         <div class="hexagontent"></div>
       </div>
       <div class="hexagon">
-        <div class="hexagontent">Data Acquisition & Analysis</div>
+        <div class="hexagontent">DATA ACQUISITION & ANALYSIS</div>
       </div>
       <div class="hexagon">
-        <div class="hexagontent">Finite Element Analysis</div>
+        <div class="hexagontent">FINITE ELEMENT ANALYSIS</div>
       </div>
       <div class="hexagon">
-        <div class="hexagontent">Computer Programming</div>
+        <div class="hexagontent">COMPUTER PROGRAMMING</div>
       </div>
     </div>
 
@@ -137,7 +137,7 @@ body  {
         </div>
       </div>
       <div class="hexagon">
-        <div class="hexagontent">Manufacturing</div>
+        <div class="hexagontent">CAM / CIM</div>
       </div>
       <div class="hexagon">
         <div class="hexagontent"></div>
