--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@ body  {
   <!--<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <link href="https://fonts.googleapis.com/css?family=Zilla+Slab&display=swap" rel="stylesheet">
+  <!--<link href="https://fonts.googleapis.com/css?family=Zilla+Slab&display=swap" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Varela+Round&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Work+Sans&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
