--- a/index.html
+++ b/index.html
@@ -82,6 +82,32 @@ body  {
   <br>
   <div class="domain-design" id="domain-design">
     <h2><span class="underline-magical-sub-header">AREA OF INTEREST</span></h2>
+  <p>
+    Having skills in the mechanical design along with the knowledge of manufacturing practices, is a great combination. It helps you to make an idea into reality, 
+    which is one of the most crucial skills I possess. It bolsters my confidence to incline more towards these two domains. A combination of these skills helps me 
+    to work as a cross-functional team member and discuss feasibility and technicalities with colleagues/ vendors/ suppliers, utilize my resources for traditional 
+    and advanced manufacturing methods, and work around the proposed project budgets in a given timeframe. 
+  <br>
+  <br>
+  The designer should not only design highly sophisticated components but also needs to consider what the manufacturing and quality process will be while in the designing 
+  phase. All these things need to be done when technologies are evolving and changing every year. Considering this, I have developed some set of skills which help me to:
+  <br>
+  <br>
+    <b>-></b> Design any parts from scratch, perform design analysis by simulating real-life conditions and optimize the components for enhancing the performance.
+  <br>
+  <b>-></b> Develop prototypes, pilot devices, tools & fixtures in less turnaround time, using subtractive/ additive manufacturing techniques.
+<br>
+<b>-></b> Transition a new part from the prototyping phase to mass production, set the processes, schedules, SOPs for better efficiencies. 
+<br>
+<b>-></b> Automate the process by python or PLC/ HMI for large-scale, stand-alone production systems.  
+<br>
+<b>-></b> Implement data acquisition process which will acquire data in real-time and can plot graphs to monitor the operations.
+<br>
+<b>-></b> Get the quality parts by implementing six sigma/ lean principles, APQP, PPAP, DVP&R, DFM/A, etc. and electrical and safety certifications like UL, CE, GMark, SAA, etc.
+  
+    </p>
+
+  
   </div>  
   
   <div class="honeycomb">
@@ -171,7 +197,7 @@ body  {
   <div class="project-design" id="project-design">
     <h2><span class="underline-magical-sub-header">PROJECTS</span></h2>
     <p>
-      I have worked on a variety of projects and have a part in researching and developing new processes, enhancing productivity
+      I have worked on a variety of projects and have played a part in researching and developing new processes, enhancing productivity
       and efficiency of the manufacturing lines, prototyping new devices, advanced data analysis, optimizing products, 
       automating manual operations, design & fabrication of an ATV. 
     </p>
@@ -307,10 +333,21 @@ body  {
   <div class="skills-design" id="skills-design">
     <h2><span class="underline-magical-sub-header">SKILLS</span></h2>
     <p>
-      Mechanical engineers always need to be technically minded, able to demonstrate numerical and scientific ability and
-      have problem-solving skills. With this approach, I have always tried to augment some of the best technical and software skills
-      which could be helpful at the workplace to encounter complex and unfamiliar engineering problems and derive the best data-
-      driven solutions. My involvement in different projects has built my interest in learning advanced software which includes: 
+      I always aimed to be technically minded, to be able to demonstrate numerical, scientific abilities and have a problem-solving attitude with the combination of best in class
+      technologies. This approach has helped me to augment some of the best technologies and software skills which could be helpful at the workplace to encounter
+      complex and unfamiliar engineering problems and derive the best data-driven, calculated solutions. My involvement in different projects at diverse workplaces has aided me
+      to gain confidence using my software and hands-on skills. 
+      <br>
+      <br>
+      In this section below, I have mentioned all the skills I have acquired based on different categories.  Most of the skills are self-taught. But I was very fortunate
+      to implement all of these during my studies, research, projects and at workplaces to retain it for a longer time. 
+      <br>
+      <br>
+      And if you want to learn about my soft skills, let’s have a discussion and plan a project together! I feel that soft skills and work ethics can’t be expressed. 
+      One needs to feel or experience it at the workplace. It’s essential to notice how I react to a difficult situation, how flexible I am, how easily I can communicate 
+      technical things with others, my leadership qualities, multi-tasking skills and my behaviour while working in a team. So, I’ll let you decide what soft skills make
+       me stand among the competition.
+
     </p>
   </div>
 
